fixing product page

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.swal-high-index {
+  z-index: 999999999999999999999999999999999999999999999999999999999999999999;
+}
