--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,3 +5,15 @@
 .swal-high-index {
   z-index: 999999999999999999999999999999999999999999999999999999999999999999;
 }
+
+@keyframes loading {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
